# personal-ai-assistant-system

./: .gitignore  README.md  main.py  pyproject.toml
.qodo/: history.sqlite
personal_ai_assistant/: __init__.py
personal_ai_assistant/app/features/: __init__.py
personal_ai_assistant/app/features/email_managment/: __init__.py  route.py
personal_ai_assistant/app/features/task_managment/: enum.py  route.py
personal_ai_assistant/app/helpers/: __init__.py  file_validator.py  request_router.py  validate_url.py
personal_ai_assistant/app/integrations/: __init__.py
personal_ai_assistant/app/integrations/google_workspace/: __init__.py  google.py
personal_ai_assistant/app/integrations/llm/: __init__.py
personal_ai_assistant/app/integrations/llm/nlp/: __init__.py
personal_ai_assistant/app/integrations/llm/nlp/google_genai/: __init__.py  gemini.py
personal_ai_assistant/app/integrations/llm/stt/: __init__.py
personal_ai_assistant/app/integrations/llm/stt/whisper/: __init__.py  whisper.py
personal_ai_assistant/app/integrations/llm/tts/: __init__.py
personal_ai_assistant/app/integrations/llm/tts/coqui/: coqui.py
personal_ai_assistant/app/integrations/mail/: __init__.py
personal_ai_assistant/app/integrations/mail/g_mail/: __init__.py  mail.py
