[tool.poetry]
name = "personal-ai-assistant"
version = "0.1.0"
description = ""
authors = ["emmanuel1-byte <emmnauelhilary9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
